syntax = "proto3";

package ProtoSerializer;

message Player {
  int32 player_id = 1;
  int32 health = 2;
  int32 lvl = 3;
  int32 xp = 4;
}

message Coordinates {
  int32 x = 1;
  int32 y = 2;
}

message Item {
  enum ItemType {
    STICK = 0;
  }

  ItemType type = 1;
  int32 owner_id = 2;
}

message Object {
  enum ObjectType {
    ARTEFACT = 0;
    FLOOR = 1;
    WALL = 2;
  }


  ObjectType type = 1;
  Coordinates coords = 2;
}

message State {
  Player player = 1;
  repeated Item items = 2;
  repeated Object objects = 3;
}