#ifndef ARCH_ROGUELIKE_WORLDSTATE_H
#define ARCH_ROGUELIKE_WORLDSTATE_H

namespace game_engine::world_state {
class WorldState {

private:
};
}

#endif //ARCH_ROGUELIKE_WORLDSTATE_H
